unpackaged/objects/DC_User_Territory_Mapping__c.object
<CustomObject>
  <customSettingsType>List</customSettingsType>
  <fields>
    <fullName>User_Territory_10__c</fullName>
    <label>User Territory 10</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_Territory_11__c</fullName>
    <label>User Territory 11</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_Territory_12__c</fullName>
    <label>User Territory 12</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <label>DC User Territory Mapping</label>
</CustomObject>